# prtracker

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
notes/: 01-jinja-template.md
src/prtracker/: __init__.py  pr_tracker.py  types.py
src/prtracker/server/: db.py  server.py  templates.py
src/prtracker/server/routes/: api.py  items.py  views.py
src/prtracker/ui/: base.html  index.html
src/prtracker/ui/partials/: add_form.html  header.html  new_pr_card.html  pr_card.html  pr_counter.html  pr_list.html
src/prwatch/: __init__.py
tests/: __init__.py
